# perf_dashboard

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  run_postgres.sh  run_schema.sh  schema.sql
src/: lib.rs  main.rs
src/domain/: perf.rs
src/interface/: api.rs
src/usecase/: mod.rs  perf_runs_service.rs
statics/: dashboard.js  index.html  search.html  search.js
